--- a/Pymaceuticals/matplotlib.ipynb
+++ b/Pymaceuticals/matplotlib.ipynb
@@ -14,21 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dependencies and Setup\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import scipy.stats as st\n",
-    "import numpy as np\n",
-    "from scipy.stats import linregress"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -138,12 +124,19 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as st\n",
+    "from scipy.stats import linregress\n",
+    "\n",
     "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
     "study_results_path = \"data/Study_results.csv\"\n",
@@ -161,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -170,63 +163,30 @@
        "249"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the number of mice in the 'Mouse ID' column\n",
+    "# Checking the number of mice.\n",
     "mouse_count = len(mouse_study[\"Mouse ID\"].unique())\n",
     "mouse_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002257E67DBB0>"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped_df = mouse_study.set_index('Drug Regimen').groupby(['Drug Regimen'])\n",
-    "grouped_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=object)"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
-    "duplicate_mice = mouse_study_df.loc[mouse_study_df.duplicated(subset=['Mouse ID', 'Timepoint']), 'Mouse ID'].unique()\n",
-    "duplicate_mice"
+    "df =  mouse_study.loc[mouse_study.duplicated(subset=['Mouse ID', 'Timepoint']), 'Mouse ID'].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -345,24 +305,37 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
-    "mouse_study = mouse_study[mouse_study['Mouse ID'].isin(duplicate_mice)== False]\n",
+    "mouse_study = mouse_study[mouse_study['Mouse ID'].isin(df)== False]\n",
     "mouse_study.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "248"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Checking the number of mice in the clean DataFrame.\n"
+    "# Checking the number of mice in the clean DataFrame.\n",
+    "clean_mouse_count = len(mouse_study[\"Mouse ID\"].unique())\n",
+    "clean_mouse_count"
    ]
   },
   {
@@ -374,24 +347,346 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean Tumor Volume</th>\n",
+       "      <th>Median Tumor Volume</th>\n",
+       "      <th>Tumor Volume Variance</th>\n",
+       "      <th>Tumor Volume Std. Dev.</th>\n",
+       "      <th>Tumor Volume Std. Err.</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>50.446266</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "      <td>0.544332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Mean Tumor Volume  Median Tumor Volume  Tumor Volume Variance  \\\n",
+       "Drug Regimen                                                                  \n",
+       "Capomulin             40.675741            41.557809              24.947764   \n",
+       "Ceftamin              52.591172            51.776157              39.290177   \n",
+       "Infubinol             52.884795            51.820584              43.128684   \n",
+       "Ketapril              55.235638            53.698743              68.553577   \n",
+       "Naftisol              54.331565            52.509285              66.173479   \n",
+       "Placebo               54.033581            52.288934              61.168083   \n",
+       "Propriva              52.320930            50.446266              43.852013   \n",
+       "Ramicane              40.216745            40.673236              23.486704   \n",
+       "Stelasyn              54.233149            52.431737              59.450562   \n",
+       "Zoniferol             53.236507            51.818479              48.533355   \n",
+       "\n",
+       "              Tumor Volume Std. Dev.  Tumor Volume Std. Err.  \n",
+       "Drug Regimen                                                  \n",
+       "Capomulin                   4.994774                0.329346  \n",
+       "Ceftamin                    6.268188                0.469821  \n",
+       "Infubinol                   6.567243                0.492236  \n",
+       "Ketapril                    8.279709                0.603860  \n",
+       "Naftisol                    8.134708                0.596466  \n",
+       "Placebo                     7.821003                0.581331  \n",
+       "Propriva                    6.622085                0.544332  \n",
+       "Ramicane                    4.846308                0.320955  \n",
+       "Stelasyn                    7.710419                0.573111  \n",
+       "Zoniferol                   6.966589                0.516398  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "grouped_df = mouse_study.set_index('Drug Regimen').groupby(['Drug Regimen'])\n",
+    "\n",
+    "mean = grouped_df[\"Tumor Volume (mm3)\"].mean()\n",
+    "median = grouped_df[\"Tumor Volume (mm3)\"].median()\n",
+    "variance = grouped_df[\"Tumor Volume (mm3)\"].var()\n",
+    "std = grouped_df[\"Tumor Volume (mm3)\"].std()\n",
+    "sem = grouped_df[\"Tumor Volume (mm3)\"].sem()\n",
     "\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
-    "\n"
+    "\n",
+    "tumor_summary = pd.DataFrame({\n",
+    "    \"Mean Tumor Volume\": mean,\n",
+    "    \"Median Tumor Volume\": median,\n",
+    "    \"Tumor Volume Variance\": variance,\n",
+    "    \"Tumor Volume Std. Dev.\": std,\n",
+    "    \"Tumor Volume Std. Err.\": sem,\n",
+    "       \n",
+    "})\n",
+    "\n",
+    "tumor_summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>var</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>50.446266</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "      <td>0.544332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Tumor Volume (mm3)                                          \n",
+       "                           mean     median        var       std       sem\n",
+       "Drug Regimen                                                             \n",
+       "Capomulin             40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin              52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol             52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril              55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol              54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo               54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva              52.320930  50.446266  43.852013  6.622085  0.544332\n",
+       "Ramicane              40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn              54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
+    "summary_table = grouped_df.agg({'Tumor Volume (mm3)': ['mean', 'median', 'var', 'std', 'sem']})\n",
+    "summary_table\n",
     "# This method produces everything in a single groupby function\n"
    ]
   },
